[package]
name = "fixed-byterepr"
version = "1.0.1"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2021"
description = "Big-endian and little-endian fixed byte conversion traits."
readme = "README.md"
repository = "https://github.com/vorot93/fixed-byterepr"
license = "GPL-3.0 WITH Classpath-exception-2.0"
keywords = ["byte", "endian", "big-endian", "little-endian", "binary"]
categories = ["encoding", "parsing"]

[dependencies]
